// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`An ETextArea > looks like a textarea > notext 1`] = `
<div data-app>
     <div class="v-field v-field--center-affix v-field--variant-filled v-theme--light v-locale--is-ltr"
          error-messages
          hide-details="auto">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
               <div aria-hidden="true"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    class="v-progress-linear v-theme--light v-locale--is-ltr"
                    role="progressbar"
                    style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                    <!---->
                    <div class="v-progress-linear__background bg-primary"></div>
                    <div class="v-progress-linear__buffer bg-primary"
                         style="width: 0%;"></div>
                    <transition-stub appear="false"
                                     css="true"
                                     name="fade-transition"
                                     persisted="false">
                         <div class="v-progress-linear__indeterminate">
                              <div class="v-progress-linear__indeterminate long bg-primary"></div>
                              <div class="v-progress-linear__indeterminate short bg-primary"></div>
                         </div>
                    </transition-stub>
                    <!---->
               </div>
          </div>
          <!---->
          <div class="v-field__field"
               data-no-activator>
               <label aria-hidden="true"
                      class="v-label v-field-label v-field-label--floating">
                    <!---->
                    test
               </label>
               <label aria-hidden="false"
                      class="v-label v-field-label"
                      for>
                    <!---->
                    test
               </label>
               <div active="false"
                    class="editor editor--editable"
                    clearable="false"
                    clearicon="$clear"
                    details="false"
                    dirty="false"
                    disabled="false"
                    error="false"
                    error-messages
                    flat="false"
                    focused="false"
                    glow="false"
                    hide-details="auto"
                    iconcolor="false"
                    label="test"
                    loading="false"
                    persistentclear="false"
                    reverse="false"
                    singleline="false"
                    tile="false"
                    variant="filled">
                    <!--v-if-->
                    <div class="editor__content"></div>
               </div>
          </div>
          <!---->
          <!---->
          <div class="v-field__outline">
               <!---->
               <!---->
          </div>
     </div>
</div>
`;

exports[`An ETextArea > looks like a textarea > withtext 1`] = `
<div data-app>
     <div class="v-field v-field--center-affix v-field--variant-filled v-theme--light v-locale--is-ltr"
          error-messages
          hide-details="auto">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
               <div aria-hidden="true"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    class="v-progress-linear v-theme--light v-locale--is-ltr"
                    role="progressbar"
                    style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                    <!---->
                    <div class="v-progress-linear__background bg-primary"></div>
                    <div class="v-progress-linear__buffer bg-primary"
                         style="width: 0%;"></div>
                    <transition-stub appear="false"
                                     css="true"
                                     name="fade-transition"
                                     persisted="false">
                         <div class="v-progress-linear__indeterminate">
                              <div class="v-progress-linear__indeterminate long bg-primary"></div>
                              <div class="v-progress-linear__indeterminate short bg-primary"></div>
                         </div>
                    </transition-stub>
                    <!---->
               </div>
          </div>
          <!---->
          <div class="v-field__field"
               data-no-activator>
               <label aria-hidden="true"
                      class="v-label v-field-label v-field-label--floating">
                    <!---->
                    test
               </label>
               <label aria-hidden="false"
                      class="v-label v-field-label"
                      for>
                    <!---->
                    test
               </label>
               <div active="false"
                    class="editor editor--editable"
                    clearable="false"
                    clearicon="$clear"
                    details="false"
                    dirty="false"
                    disabled="false"
                    error="false"
                    error-messages
                    flat="false"
                    focused="false"
                    glow="false"
                    hide-details="auto"
                    iconcolor="false"
                    label="test"
                    loading="false"
                    persistentclear="false"
                    reverse="false"
                    singleline="false"
                    tile="false"
                    variant="filled">
                    <!--v-if-->
                    <div class="editor__content">
                         <div class="tiptap ProseMirror"
                              contenteditable="true"
                              role="textbox"
                              tabindex="0"
                              translate="no">
                              <p>Here comes a text with new lines and new lines with in them and tags a</p>
                         </div>
                    </div>
               </div>
          </div>
          <!---->
          <!---->
          <div class="v-field__outline">
               <!---->
               <!---->
          </div>
     </div>
</div>
`;
